two-tier-vnet/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualNetworkName": {
            "type": "string",
            "metadata": {
                "description": "The resource name of your Virtual Network"
            }
        },
        "addressPrefix": {
            "type": "string",
            "metadata": {
                "description": "The CIDR address range for your Virtual Network"
            }
        },
        "publicSecurityGroupName": {
            "type": "string",
            "metadata": {
                "description": "The name of the Network Security Group for public subnet"
            }
        },
        "publicSubnetPrefix": {
            "type": "string",
            "metadata": {
                "description": "The CIDR address range for the public subnet"
            }
        },
        "privateSecurityGroupName": {
            "type": "string",
            "metadata": {
                "description": "The name of the Network Security Group for the private subnet"
            }
        },
        "privateSubnetPrefix": {
            "type": "string",
            "metadata": {
                "description": "The CIDR address range for the private subnet"
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "The region for all resources, defaults to the resource group region, which best practice says should always be the case (i.e. resources in a resource group should be in the same region as the resource group)"
            }
        }
    },
    "resources": [
        {
            "apiVersion": "2019-09-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('publicSecurityGroupName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh_443_rule",
                        "properties": {
                            "description": "Allow SSH on port 443 from anywhere",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2019-09-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('privateSecurityGroupName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh_443_allow_public_inbound_rule",
                        "properties": {
                            "description": "Allow SSH on port 22 from the Public Subnet",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('publicSubnetPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "ssh_443_block_internet_inbound_rule",
                        "properties": {
                            "description": "Block SSH on port 443 from the anywhere else",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "all_block_outbound_rule",
                        "properties": {
                            "description": "Block Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Deny",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2019-09-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworkName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('publicSecurityGroupName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('privateSecurityGroupName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "publicSubnet",
                        "properties": {
                            "addressPrefix": "[parameters('publicSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('publicSecurityGroupName'))]"
                            }
                        }
                    },
                    {
                        "name": "privateSubnet",
                        "properties": {
                            "addressPrefix": "[parameters('privateSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('privateSecurityGroupName'))]"
                            }
                        }
                    }
                ]
            }
        }
    ]
}
